--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, officia. Necessitatibus corporis sequi ducimus impedit delectus nemo, numquam esse quo beatae hic, fuga non et commodi quaerat a, cumque nobis.</p>
+        <h3>github code push</h3>
+        <ol>
+            <li>git add</li>
+            <li>git commit</li>
+            <li>git push</li>
+
+        </ol>
+    </div>
 </body>
 </html>
