--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, officia. Necessitatibus corporis sequi ducimus impedit delectus nemo, numquam esse quo beatae hic, fuga non et commodi quaerat a, cumque nobis.</p>
-        <h3>github code push</h3>
+        <h3>github code</h3>
         <ol>
             <li>git add</li>
             <li>git commit</li>
             <li>git push</li>
 
         </ol>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, officia. Necessitatibus corporis sequi ducimus impedit delectus nemo, numquam esse quo beatae hic, fuga non et commodi quaerat a, cumque nobis.</p>
+        <h3>github code</h3>
+        <ol>
+            <li>git add</li>
+            <li>git commit</li>
+            <li>git push</li>
+
+        </ol>
+        <p>Always have to push code to github after modification</p>
     </div>
 </body>
 </html>
